more spacing issues

--- a/main.css
+++ b/main.css
@@ -71,6 +71,8 @@ nav a {
     height: 200px;
     border-radius:30px;
     padding:30px;
+    height: auto;   
+
     /* max-width: 700px; */
     /* width: 700px; */
 }
