--- a/main_small.css
+++ b/main_small.css
@@ -19,7 +19,6 @@
         width: 100%;
         box-sizing: border-box;
         padding: 10px;
-        height: auto;   
         margin:20px 0;
     }
     #public-speaking-rotterdam{
@@ -28,7 +27,7 @@
         /* height: fit-content; */
         color:white;
         background-size: 150%;;
-        height:500px;
+        height:600px;
         width:100vw;
         margin-left:-5px;
         border-radius:0;
@@ -38,7 +37,7 @@
     }
     #public-speaking-rotterdam h3 {
         /* text-align: center; */
-        margin-top:240px;
+        margin-top:380px;
         margin-bottom:10px;
     }
     #public-speaking-rotterdam p{
